--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,8 +22,9 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
       - name: Install dependencies
-        run:
-          python3 -m pip install "[.dev]"
+        run: |
+          python3 -m pip install --upgrade pip
+          python3 -m pip install '[.dev]'
       - name: Run Ruff
         run:
           ruff --check .
