--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip
-          python3 -m pip install '[.dev]'
+          python3 -m pip install `'[.dev]'`
       - name: Run Ruff
         run:
           ruff --check .
