--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,12 @@ authors = [
     {name = "Teresa Kubacka", email = "teresa@xurce.ch"}
 ]
 
+[project.optional-dependencies]
+docs = [
+    "sphinx==7.2.6",
+    "furo==2024.01.29",
+]
+
 [build-system]
 requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
