--- a/.github/workflows/sphinx.yaml
+++ b/.github/workflows/sphinx.yaml
@@ -13,15 +13,8 @@ jobs:
       contents: write
     steps:
     - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-    - name: Install dependencies
-      run: |
-        pip install '.[docs]'
-    - name: Sphinx build
-      run: |
-        cd docs
-        make html
+    - name: Build HTML
+      uses: ammaraskar/sphinx-action@master
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
