--- a/.github/workflows/sphinx.yaml
+++ b/.github/workflows/sphinx.yaml
@@ -15,6 +15,11 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
+
+    - uses: actions/setup-python@v5
+      with:
+        python-version: "3.12.x"
+
     - name: Install dependencies
       run: |
         make install_docs
