Don't run CI when you don't need it (#12)

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,15 +2,23 @@ name: "ChartCraftHub Lint"
 on:
   pull_request:
   push:
+    paths:
+      - "**.py"
+    paths-ignore:
+      - "docs/**"
     branches:
       - trunk
+
+concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: true
 
 env:
   PYTHON_VERSION: 3.12.1
 
 jobs:
-  lint:
-    name: 🚨 Lint Python code
+  ci:
+    name: 🛠️ Setup Python environment
     runs-on: ubuntu-latest
     steps:
       - name: Setup Python environment
@@ -25,19 +33,5 @@ jobs:
         run: make install
       - name: Lint
         run: make lint
-  test:
-    name: 🧪 Test Python code
-    runs-on: ubuntu-latest
-    steps:
-      - name: Setup Python environment
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 1
-      - uses: actions/setup-python@v5
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-          cache: 'pip'
-      - name: Install dependencies
-        run: make install
       - name: Test
         run: make test
