--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -9,3 +9,7 @@ updates:
     schedule:
       # Check for updates to GitHub Actions every week
       interval: "weekly"
+  - package-ecosystem: "devcontainers"
+    directory: "/"
+    schedule:
+      interval: "weekly"
