--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,9 +3,11 @@ on:
   pull_request:
     paths:
       - "**.py"
+      - "**.ipynb"
   push:
     paths:
       - "**.py"
+      - "**.ipynb"
     branches:
       - trunk
 
