--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,17 @@
 #https://peps.python.org/pep-0621/#example
 
 [project]
-name = "ChartCraftHub"
-version = "0.1.0"
+name = "chartcrafthub"
+version = "0.1.3"
 description = "Code, debug, reuse this chart, workshop materials and more."
 license = {file = "LICENSE", name = "MIT"}
+classifiers = [
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+]
+keywords = ["matplotlib", "visuzlization", "tutorial"]
+readme = "README.md"
 dependencies = [
     "jupyter==1.0.0",
     "matplotlib==3.8.3",
@@ -24,17 +31,35 @@ requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
 [project.scripts]
-cch = "ChartCraftHub.__main__:fundamentals"
+cch = "chartcrafthub.__main__:fundamentals"
 
 [project.optional-dependencies]
+build = ["build", "twine"]
 dev = [
     "pytest==8.0.2",
-    "ruff==0.3.0"
+    "ruff==0.3.0",
+    "bumpver==2023.1129"
 ]
 docs = [
     "sphinx==7.2.6",
     "furo==2024.01.29",
 ]
+
+[tool.bumpver]
+current_version = "0.1.3"
+version_pattern = "MAJOR.MINOR.PATCH"
+commit_message  = "bump version {old_version} -> {new_version}"
+commit          = true
+tag             = true
+push            = false
+
+    [tool.bumpver.file_patterns]
+    "pyproject.toml" = [
+        'current_version = "{version}"',
+        'version = "{version}"',
+    ]
+    "src/chartcrafthub/__init__.py" = ["{version}"]
+    "docs/source/conf.py" = ["{version}"]
 
 [tool.ruff]
 extend-include = [
